<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile"
            />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/nav_order" />
    </group>
    <item android:title="Order">
        <menu>
            <item
                android:id="@+id/nav_neworder"
                android:icon="@drawable/addorders"
                android:title="@string/new_order" />
            <item
                android:id="@+id/nav_discount"
                android:icon="@drawable/discount"
                android:title="@string/nav_discount" />

        </menu>
    </item>
    <group>
        <item android:title="logout">
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/nav_logout" />
        </item>
    </group>

</menu>