<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_profile"
    android:background="@color/cardview_light_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="180dp"
            android:src="@drawable/userimages" />

        <TextView
            android:id="@+id/editprofile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/editprofile_picture"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editprofile_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="180dp"
                android:layout_marginRight="10dp"
                android:text="@string/editprofile_firstname"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/editprofile_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editprofile_firstname"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40sp"
                android:text="@string/editprofile_lastname"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/editprofile_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editprofile_lastname"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/editprofile_mail"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20dp" />


        </LinearLayout>


        <EditText
            android:id="@+id/EditSecondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="-359dp"
            android:layout_marginTop="240dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/EditFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="169dp"
            android:layout_marginRight="31dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/EditEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="-360dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="169dp"
            android:ems="10"
            android:hint="....@gmail.com"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="65dp"
            android:paddingBottom="70dp"
            android:paddingTop="50dp"
            >

            <Button
                android:id="@+id/saveiditprofile"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/round"
                android:text="@string/saveiditprofile"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>