<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verify_create_acount">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/verifyacount_code"
            android:layout_width="218dp"
            android:layout_height="39dp"
            android:layout_above="@+id/verifyaccount_submit"
            android:layout_alignStart="@+id/myImage"
            android:layout_alignEnd="@+id/myImage"
            android:layout_marginHorizontal="59dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/round_edittxt_login"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/verifyacount_code"
            android:inputType="number" />

        <Button
            android:id="@+id/verifyaccount_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="95dp"
            android:layout_marginEnd="69dp"
            android:layout_marginRight="69dp"
            android:layout_marginBottom="114dp"
            android:background="@drawable/round"
            android:onClick="to_home_page"
            android:text="@string/verifyacount_submot"
            android:textColor="@android:color/white"

            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/virifymessage"
            android:layout_width="266dp"
            android:layout_height="63dp"
            android:layout_above="@+id/verifyacount_code"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="37dp"
            android:text="@string/virifymessage"
            android:textColor="@color/colorPrimaryDark" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>