<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/forgetpass_code"
            android:layout_width="224dp"
            android:layout_height="46dp"
            android:layout_above="@+id/forgetpass_submit"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="60dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="27dp"
            android:background="@drawable/round_edittxt_login"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/forgetpass_code"
            android:inputType="number" />

        <Button
            android:id="@+id/forgetpass_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="114dp"
            android:background="@drawable/round"
            android:onClick="to_new_password"
            android:text="@string/forgetpass_submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/newpasswordmessage"
            android:layout_width="259dp"
            android:layout_height="42dp"
            android:layout_above="@+id/forgetpass_code"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="71dp"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="215dp"
            android:layout_marginBottom="25dp"
            android:text="@string/newpasswordmessage"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
