<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPassword">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/myImage"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/Newpass_newpassword"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_above="@+id/Newpass_submit"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="85dp"
            android:background="@drawable/round_edittxt_login"

            android:ems="10"
            android:gravity="center"
            android:hint="@string/Newpass_newpassword"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/Newpass_verifynewpass"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_above="@+id/Newpass_submit"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_edittxt_login"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Newpass_verifynewpass"
            android:inputType="number" />

        <Button
            android:id="@+id/Newpass_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginEnd="66dp"
            android:layout_marginRight="66dp"
            android:layout_marginBottom="139dp"
            android:background="@drawable/round"
            android:onClick="to_home_page"
            android:text="@string/Newpass_submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"

            />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>